prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/assign_to_expr.nut
// EXPECT_ERROR: "can't assign to expression"
(1 + 2) = 5
